# clique-ml

./: .gitignore  README.md  cuda-venv.sh  ensemble.py  pyproject.toml  sonoran.ipynb
src/clique/: __init__.py  clique.py  ensemble.py
test/: stock_bars.csv  stock_predictor.ipynb
